# turntable

./: .env.example  .gitignore  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: build_real_sample.py
src/turntable/resolve/: __init__.py  cluster.py  normalize.py  scoring.py
src/turntable/sources/: __init__.py  base.py  config.py  discogs.py  lastfm.py  musicbrainz.py  setlistfm.py
tests/: evaluate.py  fixtures.py  test_resolve.py  test_sources.py
